# 10k_classifier

./: .gitignore  10k_filings_test_wo_labels.csv  10k_filings_train.csv  README.md  predictor.py  pyproject.toml  requirements.txt  test_model.py  test_predictor.py
.github/workflows/: ci.yml
