[tool.poetry]
name = "udem-sec"
version = "0.1.0"
description = ""
authors = ["Pierre Valentin <pvalentin@investpsp.ca>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
notebook = "^7.2.1"
pandas = "^2.2.2"
scikit-learn = "^1.5.1"
nltk = "^3.9.1"
instructor = "^1.4.2"
openai = "^1.46.0"
pydantic = "^2.9.2"
pdbpp = "^0.10.3"
tiktoken = "^0.7.0"
pytest = "^8.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
